
Date format: Gregorian Little Endian, starting with Day [DD/MM/YYYY]

# TODO FOR FUTURE RELEASES
#
# Move other generic tests to external module
# Permit regex-mappings and direct mappings. All others are unsupported.
# Parameters read from INI formatted file at runtime instead of command-line parameters

Unreleased

# Version 3_0_X

# - Updated Nortel/Avaya plugin
# - New plugin for OSPF area spf runs
# - New plugin for number of routes in routing table
# - Defined triggers (thresholds) for OSPF, number of routes, Nortel/Avaya metrics and various interfaces
# - Saner handling of service_descriptions for Shinken so that names are unique but any
#   user input descriptions show up in the description not the service name.
# - Nortel/Avaya ES-470 type switches, only apply thresholds on the gigabit uplinks and not the 10/100 ports
# - Updated all Defaults files: Removed duplicate keys (oups), normalized OID naming
# - Performance testing with Shinken and the SnmpBooster module


13/11/2012

# Version 3_0_6

# - Updated nortel/avaya ERS plugin with better power supply descriptions
# - New command-line argument for setting the business impact, acts globally on all services
#   All informational variables added with -i are also added globally to all services
# - Updated command-line help

13/11/2012

# Version 3_0_5

# - Always collect chassisstats, disregard chassiscollect option. active_check_enabled dos not
#   work correctly in Shinken, it collects the data, but then discards it because the active_check is disabled
#   instead of just skipping the check.

04/11/2012

# Version 3_0_4

# - Corrected duplicates in Defaults.cisco that did not pass ConfigObj strict checking
# - Renamed Default files to make sure the base Default files is treated first
#   This is due to ConfigObj module which needs to load data in order to be able to apply
#   inheritance.
# - Renamed Defaults.unified to Defaults_base.ini
# - Renamed Defaults.pluginname to Defaults_plugin_pluginname.ini
