@@ -177,7 +177,6 @@
 
     [[ifInOctets]]
         ds_type = DERIVE
-        ds_limit = 4294967295
         ds_unit = bps
         ds_name = in
         ds_calc = 8,mul
@@ -186,7 +185,7 @@
         ds_min_oid_value = 0
         
     [[ipForwDatagrams]]
-        ds_type = DERIVE64
+        ds_type = DERIVE
         ds_oid = $OidipForwDatagrams
     [[ipOutRequests]]
         ds_oid = $OidipOutRequests
