@@ -26,8 +26,9 @@
     OidacdPaaResultTwoWayDvPrevMaxValue                            = .1.3.6.1.4.1.22420.2.5.1.1.41
     OidacdPaaResultPktLossPrevLargestGap                           = .1.3.6.1.4.1.22420.2.5.1.1.101
 
-    OidacdDescCpuUsageCurrent                        = .1.3.6.1.4.1.22420.1.20
-    OidacdDescCpuUsageAverage15                      = .1.3.6.1.4.1.22420.1.21
+    OidacdDescCpuUsageCurrent                        = .1.3.6.1.4.1.22420.1.1.20
+    OidacdDescCpuUsageAverage15                      = .1.3.6.1.4.1.22420.1.1.21
+    OiacdPaaUdpCfgSamplingPeriod                      = .1.3.6.1.4.1.22420.2.5.3.1.5
     
     [[acdPaaResultOneWayDelayPrevMaxValue]]
         ds_type	= 	GAUGE
@@ -43,6 +44,9 @@
         ds_oid	=	$OidacdPaaResultTwoWayDvPrevMaxValue.%(instance)s
     [[acdPaaResultPktLossPrevLargestGap]]
         ds_type	= 	GAUGE
+        ds_oid_max = $OiacdPaaUdpCfgSamplingPeriod.%(instance)s
+        ds_oid_min_value = 0
+        ds_calc = 1000.0,div
         ds_oid	=	$OidacdPaaResultPktLossPrevLargestGap.%(instance)s
         
     [[acdDescCpuUsageCurrent]]
@@ -69,8 +73,7 @@
 [DSTEMPLATE]
 
     [[Accedian-metronid]]
-#        ds	=    "acdDescCpuUsageCurrent,acdDescCpuUsageAverage15"
-        ds	=    ""
+        ds	=    "acdDescCpuUsageCurrent,acdDescCpuUsageAverage15"
     
 
     [[Accedian-metronid-paa]]
